vamtiger-node-typescript-commit

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "chai": "^4.1.2",
         "mocha": "^5.2.0",
         "typescript": "^2.8.3",
-        "vamtiger-node-typescript-commit": "0.0.51"
+        "vamtiger-node-typescript-commit": "latest"
     },
     "dependencies": {
         "xregexp": "^4.1.1"
