--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vamtiger-regex-html-href",
-    "version": "0.0.2",
+    "version": "0.0.4-0",
     "description": "A regular expression to match an href for a defined html string.",
     "main": "build",
     "scripts": {
@@ -33,7 +33,7 @@
         "chai": "^4.1.2",
         "mocha": "^5.2.0",
         "typescript": "^2.8.3",
-        "vamtiger-node-typescript-commit": "0.0.51"
+        "vamtiger-node-typescript-commit": "latest"
     },
     "dependencies": {
         "xregexp": "^4.1.1"
